--- a/student-login.html
+++ b/student-login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -187,7 +188,16 @@
   </div>
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
+    import { 
+      getAuth, 
+      createUserWithEmailAndPassword, 
+      signInWithEmailAndPassword 
+    } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
+    import { 
+      getFirestore, 
+      doc, 
+      setDoc 
+    } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyBQZrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
@@ -201,6 +211,7 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const db = getFirestore(app);
 
     let isRegister = false;
 
@@ -224,8 +235,17 @@
       try {
         let userCredential;
         if (isRegister) {
+          // Register new student
           userCredential = await createUserWithEmailAndPassword(auth, email, password);
+
+          // ✅ Create Firestore record for this student
+          await setDoc(doc(db, "students", userCredential.user.uid), {
+            email: email,
+            points: 0
+          });
+
         } else {
+          // Login existing student
           userCredential = await signInWithEmailAndPassword(auth, email, password);
         }
 
