--- a/vendor-dashboard.html
+++ b/vendor-dashboard.html
@@ -4,66 +4,197 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vendor Dashboard</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    html, body {
+      height: 100%;
       margin: 0;
+      padding: 0;
+      font-family: 'Roboto', Arial, sans-serif;
+      min-height: 100vh;
+      box-sizing: border-box;
+      background: transparent;
+    }
+    .background {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background-image: url('https://www.nottingham.edu.my/events/images-multimedia/25th-anniversary/banner-homepage-25th-anniversary.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      filter: blur(6px) brightness(0.7);
+      z-index: -1;
+    }
+    body {
       padding: 1rem;
-      background: #f4f4f4;
+      background: transparent;
     }
     header {
       text-align: center;
       margin-bottom: 20px;
+      background: rgba(255,255,255,0.8);
+      padding: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      backdrop-filter: blur(4px);
+      max-width: 600px;
+      margin: 0 auto 20px auto;
     }
     header img {
       max-width: 100px;
       border-radius: 50%;
       margin-bottom: 10px;
+      border: 3px solid #005f73;
     }
     header h1 {
       margin: 0;
       font-size: 1.8rem;
-      color: #007bff;
+      color: #005f73;
+      font-weight: 700;
+      letter-spacing: 0.5px;
     }
     .stats {
       text-align: center;
       margin-bottom: 20px;
-      font-size: 1rem;
+      font-size: 1.1rem;
       color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      background: rgba(255,255,255,0.8);
+      padding: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      backdrop-filter: blur(4px);
+      max-width: 600px;
+      margin: 0 auto 20px auto;
+    }
+    .stats button {
+      padding: 0.6rem 1.2rem;
+      border: none;
+      border-radius: 8px;
+      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1rem;
+      letter-spacing: 0.5px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      transition: background 0.2s, transform 0.2s;
+    }
+    .stats button:hover {
+      background: linear-gradient(90deg, #0099cc 60%, #005f73 100%);
+      transform: scale(1.02);
+    }
+    .stats button:active {
+      transform: scale(0.98);
     }
     .order-card {
-      background: white;
-      padding: 1rem;
+      background: rgba(255,255,255,0.9);
+      padding: 1.2rem;
       margin: 1rem auto;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
       max-width: 600px;
+      backdrop-filter: blur(4px);
+      border: 1px solid rgba(0,95,115,0.2);
     }
     .order-card ul {
       padding-left: 20px;
+      margin: 0.5rem 0;
+    }
+    .order-card p {
+      margin: 0.5rem 0;
+      color: #333;
+      font-weight: 500;
     }
     .order-card button {
-      background-color: #28a745;
+      background: linear-gradient(90deg, #28a745 60%, #4caf50 100%);
       color: white;
       border: none;
-      padding: 0.5rem 1rem;
+      padding: 0.6rem 1.2rem;
       margin-top: 1rem;
       cursor: pointer;
-      border-radius: 4px;
+      border-radius: 8px;
+      font-weight: bold;
+      font-size: 1rem;
+      letter-spacing: 0.5px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      transition: background 0.2s, transform 0.2s, opacity 0.2s;
+    }
+    .order-card button:hover:not(:disabled) {
+      background: linear-gradient(90deg, #4caf50 60%, #28a745 100%);
+      transform: scale(1.02);
+    }
+    .order-card button:active:not(:disabled) {
+      transform: scale(0.98);
     }
     .order-card button:disabled {
       background-color: #ccc;
       cursor: not-allowed;
+      transform: none;
+      opacity: 0.6;  /* Added dim effect */
+    }
+    @media (max-width: 700px) {
+      header, .stats {
+        max-width: 95vw;
+        padding: 0.8rem;
+      }
+      header h1 {
+        font-size: 1.5rem;
+      }
+      .stats {
+        font-size: 1rem;
+        gap: 15px;
+      }
+      .stats button {
+        padding: 0.5rem 1rem;
+        font-size: 0.95rem;
+      }
+      .order-card {
+        max-width: 95vw;
+        padding: 1rem;
+      }
+    }
+    @media (max-width: 500px) {
+      header, .stats {
+        max-width: 98vw;
+        padding: 0.6rem;
+      }
+      header h1 {
+        font-size: 1.3rem;
+      }
+      .stats {
+        font-size: 0.95rem;
+        flex-direction: column;
+        gap: 10px;
+      }
+      .stats button {
+        width: 100%;
+        padding: 0.6rem;
+      }
+      .order-card {
+        max-width: 98vw;
+        padding: 0.8rem;
+      }
+      .order-card button {
+        width: 100%;
+        padding: 0.7rem;
+      }
     }
   </style>
 </head>
 <body>
+  <div class="background"></div>
   <header>
     <img id="vendor-logo" src="https://via.placeholder.com/100" alt="Vendor Logo">
     <h1 id="vendor-name">Vendor Dashboard</h1>
   </header>
   <div class="stats">
     Orders Processed: <span id="orderCount">0</span>
+    <button onclick="window.location.href='menu-management.html?vendor=' + window.vendorId">Manage Menu</button>
   </div>
   <div id="orders-container"></div>
 
@@ -71,7 +202,7 @@
 
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getFirestore, collection, query, where, onSnapshot, updateDoc, doc, getDoc, increment } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
+    import { getFirestore, collection, query, where, orderBy, onSnapshot, updateDoc, doc, getDoc, increment } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyBQZrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
@@ -88,6 +219,7 @@
 
     const urlParams = new URLSearchParams(window.location.search);
     const vendorId = urlParams.get("vendor");
+    window.vendorId = vendorId;  // Make vendorId global for button onclick
     const ordersContainer = document.getElementById("orders-container");
     const dingSound = document.getElementById("ding-sound");
 
@@ -119,6 +251,7 @@
         <p><strong>Order ID:</strong> ${docSnap.id}</p>
         <ul>${items}</ul>
         <p><strong>Status:</strong> ${data.status}</p>
+        <p><strong>Note:</strong> ${data.note || "--"}</p>
         <button 
           data-order="${docSnap.id}" 
           onclick="markReady('${docSnap.id}')"
@@ -151,7 +284,7 @@
 
     // Listen for orders
     let firstLoad = true;
-    const q = query(collection(db, "orders"), where("vendorId", "==", vendorId));
+    const q = query(collection(db, "orders"), where("vendorId", "==", vendorId), orderBy("createdAt", "desc"));
     onSnapshot(q, (snapshot) => {
       if (!firstLoad) {
         dingSound.play();
