--- a/shop-list.html
+++ b/shop-list.html
@@ -70,7 +70,7 @@
       gap: 22px;
     }
     .shop-card {
-      width: 260px;
+      width: 300px;  /* Increased from 260px for bigger cards */
       background: linear-gradient(120deg, #e3eafcbb 80%, #f1f8e9bb 100%); /* More transparent */
       border-radius: 14px;
       box-shadow: 0 4px 16px rgba(31, 38, 135, 0.10);
@@ -91,11 +91,13 @@
     }
     .shop-card img {
       width: 100%;
-      height: 140px;
+      height: 160px;
       object-fit: cover;
+      object-position: top;
       border-top-left-radius: 14px;
       border-top-right-radius: 14px;
       background: #e3eafcbb;
+
     }
     .shop-card h3 {
       margin: 12px 0 6px 0;
@@ -123,11 +125,19 @@
       }
       .shop-card {
         width: 98vw;
-        max-width: 340px;
+        max-width: 380px;  /* Increased max-width for bigger cards */
       }
       .shop-card img {
-        height: 110px;
-      }
+  width: 100%;
+  height: 220px; /* slightly taller, keeps ratio balanced */
+  object-fit: cover;
+  object-position: 0% 5%; /* moves focus upward so banner top stays visible */
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+  background: #f1f1f1;
+  transition: opacity 0.3s ease;
+}
+
     }
     @media (max-width: 500px) {
       h1 {
@@ -137,15 +147,26 @@
       }
       .container {
         padding: 8px 0;
-        gap: 10px;
+        gap: 8px;  /* Reduced gap for more space */
+        flex-direction: row;
+        flex-wrap: wrap;
       }
       .shop-card {
-        width: 98vw;
-        max-width: 98vw;
+        width: calc(50vw - 4px);  /* Slightly wider for bigger cards */
+        max-width: calc(50vw - 4px);
       }
-      .shop-card img {
-        height: 80px;
-      }
+     .shop-card img {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+  object-position: bottom; /* Keeps banner visible */
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+  background: #e3eafcbb;
+}
+
+
+      
       .shop-card h3 {
         font-size: 1rem;
       }
