--- a/shop-list.html
+++ b/shop-list.html
@@ -26,26 +26,26 @@
     }
     h1 {
       text-align: center;
-      padding: 18px 0 14px 0;
-      margin: 32px auto 0 auto;
-      max-width: 900px;
-      background: rgba(255,255,255,0.70); /* More transparent */
-      border-radius: 18px;
-      box-shadow: 0 8px 32px rgba(31,38,135,0.12);
-      font-size: 2rem;
+      padding: 48px 0 40px 0;  /* 2x bigger padding */
+      margin: 64px auto 0 auto;  /* 2x bigger margin */
+      max-width: 1800px;  /* 2x bigger */
+      background: rgba(255,255,255,0.70);
+      border-radius: 36px;  /* 2x bigger radius */
+      box-shadow: 0 16px 64px rgba(31,38,135,0.12);  /* 2x bigger shadow */
+      font-size: 4.8rem;  /* 2x bigger */
       font-weight: 700;
       color: #005f73;
-      letter-spacing: 0.5px;
+      letter-spacing: 1px;  /* 2x bigger */
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 10px;
+      gap: 20px;  /* 2x bigger gap */
     }
     h1::before {
       content: "🍴";
-      font-size: 1.7rem;
+      font-size: 4rem;  /* 2x bigger */
       color: #b7b7d7;
-      margin-right: 8px;
+      margin-right: 16px;  /* 2x bigger */
     }
     body {
       min-height: 100vh;
@@ -55,124 +55,119 @@
       justify-content: flex-start;
     }
     .container {
-      background: rgba(255,255,255,0.70); /* More transparent */
-      border-radius: 18px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
-      padding: 32px 18px 24px 18px;
-      max-width: 900px;
+      background: rgba(255,255,255,0.70);
+      border-radius: 36px;  /* 2x bigger */
+      box-shadow: 0 16px 64px 0 rgba(31, 38, 135, 0.18);  /* 2x bigger */
+      padding: 80px 48px 64px 48px;  /* 2x bigger padding */
+      max-width: 1800px;  /* 2x bigger */
       width: 100%;
-      margin: 24px auto 0 auto;
+      margin: 48px auto 0 auto;  /* 2x bigger margin */
       position: relative;
       z-index: 1;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 22px;
+      gap: 56px;  /* 2x bigger gap */
     }
     .shop-card {
-      width: 300px;  /* Increased from 260px for bigger cards */
-      background: linear-gradient(120deg, #e3eafcbb 80%, #f1f8e9bb 100%); /* More transparent */
-      border-radius: 14px;
-      box-shadow: 0 4px 16px rgba(31, 38, 135, 0.10);
+      width: 680px;  /* 2x bigger */
+      background: linear-gradient(120deg, #e3eafcbb 80%, #f1f8e9bb 100%);
+      border-radius: 36px;  /* 2x bigger */
+      box-shadow: 0 8px 32px rgba(31, 38, 135, 0.10);  /* 2x bigger */
       overflow: hidden;
       text-align: center;
       transition: transform 0.18s, box-shadow 0.18s;
       cursor: pointer;
       position: relative;
-      border: 2px solid #005f7322;
+      border: 4px solid #005f7322;  /* 2x bigger border */
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     .shop-card:hover {
       transform: scale(1.03);
-      box-shadow: 0 8px 24px rgba(31, 38, 135, 0.18);
+      box-shadow: 0 16px 48px rgba(31, 38, 135, 0.18);  /* 2x bigger */
       border-color: #005f7355;
     }
     .shop-card img {
       width: 100%;
-      height: 160px;
+      height: 400px;  /* 2x bigger */
       object-fit: cover;
       object-position: top;
-      border-top-left-radius: 14px;
-      border-top-right-radius: 14px;
+      border-top-left-radius: 36px;  /* 2x bigger */
+      border-top-right-radius: 36px;  /* 2x bigger */
       background: #e3eafcbb;
-
     }
     .shop-card h3 {
-      margin: 12px 0 6px 0;
+      margin: 32px 0 20px 0;  /* 2x bigger margin */
       color: #005f73;
-      font-size: 1.18rem;
+      font-size: 2.7rem;  /* 2x bigger */
       font-weight: 700;
-      letter-spacing: 0.2px;
+      letter-spacing: 0.4px;  /* 2x bigger */
     }
     .shop-card p {
       color: #444;
-      padding: 0 12px 14px;
-      font-size: 0.98rem;
-      min-height: 38px;
+      padding: 0 32px 40px;  /* 2x bigger padding */
+      font-size: 2.2rem;  /* 2x bigger */
+      min-height: 96px;  /* 2x bigger */
     }
     @media (max-width: 700px) {
       h1 {
-        font-size: 1.3rem;
-        padding: 10px 0 8px 0;
-        margin-top: 12px;
+        font-size: 3.4rem;  /* 2x bigger */
+        padding: 28px 0 24px 0;  /* 2x bigger */
+        margin-top: 24px;  /* 2x bigger */
       }
       .container {
-        padding: 12px 2px;
+        padding: 40px 12px;  /* 2x bigger */
         max-width: 98vw;
-        gap: 14px;
+        gap: 40px;  /* 2x bigger */
       }
       .shop-card {
         width: 98vw;
-        max-width: 380px;  /* Increased max-width for bigger cards */
+        max-width: 840px;  /* 2x bigger */
       }
       .shop-card img {
-  width: 100%;
-  height: 220px; /* slightly taller, keeps ratio balanced */
-  object-fit: cover;
-  object-position: 0% 5%; /* moves focus upward so banner top stays visible */
-  border-top-left-radius: 14px;
-  border-top-right-radius: 14px;
-  background: #f1f1f1;
-  transition: opacity 0.3s ease;
-}
-
+        height: 520px;  /* 2x bigger */
+        object-position: 0% 5%;
+        background: #f1f1f1;
+        transition: opacity 0.3s ease;
+      }
+      .shop-card h3 {
+        font-size: 2.8rem;  /* 2x bigger */
+      }
+      .shop-card p {
+        font-size: 2.4rem;  /* 2x bigger */
+      }
     }
     @media (max-width: 500px) {
       h1 {
-        font-size: 1.1rem;
-        padding: 7px 0 5px 0;
-        margin-top: 8px;
+        font-size: 3.2rem;  /* 2x bigger */
+        padding: 24px 0 20px 0;  /* 2x bigger */
+        margin-top: 16px;  /* 2x bigger */
       }
       .container {
-        padding: 8px 0;
-        gap: 8px;  /* Reduced gap for more space */
+        padding: 32px 0;  /* 2x bigger */
+        gap: 0px;
         flex-direction: row;
         flex-wrap: wrap;
       }
       .shop-card {
-        width: calc(50vw - 4px);  /* Slightly wider for bigger cards */
-        max-width: calc(50vw - 4px);
+        width: 50vw;
+        max-width: 50vw;
       }
-     .shop-card img {
-  width: 100%;
-  height: 160px;
-  object-fit: cover;
-  object-position: bottom; /* Keeps banner visible */
-  border-top-left-radius: 14px;
-  border-top-right-radius: 14px;
-  background: #e3eafcbb;
-}
-
-
-      
+      .shop-card img {
+        height: calc(50vw * 1.6);  /* 2x bigger multiplier */
+        object-position: bottom;
+        background: #e3eafcbb;
+      }
       .shop-card h3 {
-        font-size: 1rem;
+        font-size: 2.8rem;  /* 2x bigger */
+        margin: 36px 0 24px 0;  /* 2x bigger */
       }
       .shop-card p {
-        font-size: 0.92rem;
-        padding: 0 7px 10px;
+        font-size: 2.4rem;  /* 2x bigger */
+        padding: 0 20px 40px;  /* 2x bigger */
+        min-height: 104px;  /* 2x bigger */
       }
     }
   </style>
@@ -190,7 +185,7 @@
     import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyBQzrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
+      apiKey: "AIzaSyBQZrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
       authDomain: "unm-caf-orders.firebaseapp.com",
       projectId: "unm-caf-orders",
       storageBucket: "unm-caf-orders.appspot.com",
