--- a/shop-list.html
+++ b/shop-list.html
@@ -26,26 +26,26 @@
     }
     h1 {
       text-align: center;
-      padding: 48px 0 40px 0;  /* 2x bigger padding */
-      margin: 64px auto 0 auto;  /* 2x bigger margin */
-      max-width: 1800px;  /* 2x bigger */
+      padding: 24px 0 20px 0;  /* Even bigger padding */
+      margin: 32px auto 0 auto;
+      max-width: 900px;
       background: rgba(255,255,255,0.70);
-      border-radius: 36px;  /* 2x bigger radius */
-      box-shadow: 0 16px 64px rgba(31,38,135,0.12);  /* 2x bigger shadow */
-      font-size: 4.8rem;  /* 2x bigger */
+      border-radius: 18px;
+      box-shadow: 0 8px 32px rgba(31,38,135,0.12);
+      font-size: 2.4rem;  /* Even bigger */
       font-weight: 700;
       color: #005f73;
-      letter-spacing: 1px;  /* 2x bigger */
+      letter-spacing: 0.5px;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 20px;  /* 2x bigger gap */
+      gap: 10px;
     }
     h1::before {
       content: "🍴";
-      font-size: 4rem;  /* 2x bigger */
+      font-size: 2rem;  /* Even bigger */
       color: #b7b7d7;
-      margin-right: 16px;  /* 2x bigger */
+      margin-right: 8px;
     }
     body {
       min-height: 100vh;
@@ -56,118 +56,118 @@
     }
     .container {
       background: rgba(255,255,255,0.70);
-      border-radius: 36px;  /* 2x bigger */
-      box-shadow: 0 16px 64px 0 rgba(31, 38, 135, 0.18);  /* 2x bigger */
-      padding: 80px 48px 64px 48px;  /* 2x bigger padding */
-      max-width: 1800px;  /* 2x bigger */
+      border-radius: 18px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
+      padding: 40px 24px 32px 24px;  /* Even bigger padding */
+      max-width: 900px;
       width: 100%;
-      margin: 48px auto 0 auto;  /* 2x bigger margin */
+      margin: 24px auto 0 auto;
       position: relative;
       z-index: 1;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 56px;  /* 2x bigger gap */
+      gap: 28px;  /* Even bigger gap */
     }
     .shop-card {
-      width: 680px;  /* 2x bigger */
+      width: 340px;  /* Even bigger */
       background: linear-gradient(120deg, #e3eafcbb 80%, #f1f8e9bb 100%);
-      border-radius: 36px;  /* 2x bigger */
-      box-shadow: 0 8px 32px rgba(31, 38, 135, 0.10);  /* 2x bigger */
+      border-radius: 18px;  /* Even bigger radius */
+      box-shadow: 0 4px 16px rgba(31, 38, 135, 0.10);
       overflow: hidden;
       text-align: center;
       transition: transform 0.18s, box-shadow 0.18s;
       cursor: pointer;
       position: relative;
-      border: 4px solid #005f7322;  /* 2x bigger border */
+      border: 2px solid #005f7322;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     .shop-card:hover {
       transform: scale(1.03);
-      box-shadow: 0 16px 48px rgba(31, 38, 135, 0.18);  /* 2x bigger */
+      box-shadow: 0 8px 24px rgba(31, 38, 135, 0.18);
       border-color: #005f7355;
     }
     .shop-card img {
       width: 100%;
-      height: 400px;  /* 2x bigger */
+      height: 200px;  /* Even bigger */
       object-fit: cover;
       object-position: top;
-      border-top-left-radius: 36px;  /* 2x bigger */
-      border-top-right-radius: 36px;  /* 2x bigger */
+      border-top-left-radius: 18px;
+      border-top-right-radius: 18px;
       background: #e3eafcbb;
     }
     .shop-card h3 {
-      margin: 32px 0 20px 0;  /* 2x bigger margin */
+      margin: 16px 0 10px 0;  /* Even bigger margin */
       color: #005f73;
-      font-size: 2.7rem;  /* 2x bigger */
+      font-size: 1.35rem;  /* Even bigger */
       font-weight: 700;
-      letter-spacing: 0.4px;  /* 2x bigger */
+      letter-spacing: 0.2px;
     }
     .shop-card p {
       color: #444;
-      padding: 0 32px 40px;  /* 2x bigger padding */
-      font-size: 2.2rem;  /* 2x bigger */
-      min-height: 96px;  /* 2x bigger */
+      padding: 0 16px 20px;  /* Even bigger padding */
+      font-size: 1.1rem;  /* Even bigger */
+      min-height: 48px;  /* Even bigger */
     }
     @media (max-width: 700px) {
       h1 {
-        font-size: 3.4rem;  /* 2x bigger */
-        padding: 28px 0 24px 0;  /* 2x bigger */
-        margin-top: 24px;  /* 2x bigger */
+        font-size: 1.7rem;  /* Even bigger */
+        padding: 14px 0 12px 0;
+        margin-top: 12px;
       }
       .container {
-        padding: 40px 12px;  /* 2x bigger */
+        padding: 20px 6px;  /* Even bigger padding */
         max-width: 98vw;
-        gap: 40px;  /* 2x bigger */
+        gap: 20px;  /* Even bigger gap */
       }
       .shop-card {
         width: 98vw;
-        max-width: 840px;  /* 2x bigger */
+        max-width: 420px;  /* Even bigger */
       }
       .shop-card img {
-        height: 520px;  /* 2x bigger */
+        height: 260px;  /* Even bigger */
         object-position: 0% 5%;
         background: #f1f1f1;
         transition: opacity 0.3s ease;
       }
       .shop-card h3 {
-        font-size: 2.8rem;  /* 2x bigger */
+        font-size: 1.4rem;  /* Even bigger */
       }
       .shop-card p {
-        font-size: 2.4rem;  /* 2x bigger */
+        font-size: 1.2rem;  /* Even bigger */
       }
     }
     @media (max-width: 500px) {
       h1 {
-        font-size: 3.2rem;  /* 2x bigger */
-        padding: 24px 0 20px 0;  /* 2x bigger */
-        margin-top: 16px;  /* 2x bigger */
+        font-size: 1.6rem;  /* Much bigger */
+        padding: 12px 0 10px 0;
+        margin-top: 8px;
       }
       .container {
-        padding: 32px 0;  /* 2x bigger */
-        gap: 0px;
+        padding: 16px 0;  /* Even bigger padding */
+        gap: 0px;  /* No gap for full fill */
         flex-direction: row;
         flex-wrap: wrap;
       }
       .shop-card {
-        width: 50vw;
+        width: 50vw;  /* Half screen, no calc for full fill */
         max-width: 50vw;
       }
       .shop-card img {
-        height: calc(50vw * 1.6);  /* 2x bigger multiplier */
+        height: calc(50vw * 0.8);  /* Even taller for bigger fill */
         object-position: bottom;
         background: #e3eafcbb;
       }
       .shop-card h3 {
-        font-size: 2.8rem;  /* 2x bigger */
-        margin: 36px 0 24px 0;  /* 2x bigger */
+        font-size: 1.4rem;  /* Even bigger */
+        margin: 18px 0 12px 0;  /* Even bigger margin */
       }
       .shop-card p {
-        font-size: 2.4rem;  /* 2x bigger */
-        padding: 0 20px 40px;  /* 2x bigger */
-        min-height: 104px;  /* 2x bigger */
+        font-size: 1.2rem;  /* Even bigger */
+        padding: 0 10px 20px;  /* Even bigger padding */
+        min-height: 52px;  /* Even bigger */
       }
     }
   </style>
